--- a/CLOCK_CHAT/templates/status/status.html
+++ b/CLOCK_CHAT/templates/status/status.html
@@ -21,8 +21,11 @@
                 </div>
             </div>
             {% else %}
-            <div class="my-status" onclick="window.location.href='{% url 'status_create' %}'">
-                <img src="{{user_status.status_media}}" alt="My Status">
+            <div class="my-status">
+                <input type="file" id="statusImage" accept="image/*,video/*" style="display: none;" onchange="previewStatus(event)">
+                <img src="{{user_profile}}" alt="profile">
+                <i style="color: black;font-size: 50px;font-weight:500;position: relative;right:50px;"onclick="document.getElementById('statusImage').click();" class="fa fa-plus"></i>
+
                 <div class = "text"> </div>
                     <div class="status-info">
                     <h4>My status</h4>  
