--- a/static/css/statusview.css
+++ b/static/css/statusview.css
@@ -14,18 +14,20 @@ body {
 }
 
 .wrapper {
+  padding: 10px;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background: linear-gradient(to bottom, #1a1a2e, #16213e);
 }
 
 .status-screen {
-  width: 25%;
+  padding: 10px 0px;
+  width: 30%;
   height: 100%;
-  background-color: #000;
+  background-color: #0f0f0fa8;
   color: white;
   position: relative;
   overflow: hidden;
@@ -50,7 +52,6 @@ body {
   display: flex;
   align-items: center;
   padding: 10px;
-  margin-top: 10px;
 }
 
 .profile-pic {
@@ -100,8 +101,7 @@ body {
 
 .status-body {
   width: 100%;
-  height: 85%;
-  background-color: #000000;
+  height: 82%;
   display: flex;
   align-items: center;
   justify-content: center;
