--- a/CLOCK_CHAT/templates/enduser/toolbar.html
+++ b/CLOCK_CHAT/templates/enduser/toolbar.html
@@ -13,9 +13,8 @@
 
         {% block extra_css %}
         {% endblock %}
-    
-        <script src="/static/js/chat_js.js"></script>
-        <script src="/static/js/message.js"></script>
+        {% block extra_js %}
+        {% endblock %}
         <meta name="csrf-token" content="{{ csrf_token }}">
 
     </head>
@@ -35,6 +34,16 @@
         <span class="toolbar-icon" data-tooltip="Profile"><i class="fa-regular fa-user"></i></span>
     </div>
 </div>
+
+<script>
+    window.addEventListener("pageshow", function (event) {
+        if (event.persisted || (window.performance && performance.getEntriesByType("navigation")[0].type === "back_forward")) {
+            // If the page was loaded from bfcache (back-forward cache), reload it
+            location.reload();
+        }
+    });
+    </script>
+
 {% block content %}
 
 {% endblock %}
