--- a/CLOCK_CHAT/templates/enduser/toolbar.html
+++ b/CLOCK_CHAT/templates/enduser/toolbar.html
@@ -21,7 +21,7 @@
     
 
 
-<body data-user-id="{{ request.user.id }}">
+<body data-user-id="{{ request.user.id }}" style="overflow-y:hidden;">
 
 <div class="toolbar">
     <div class="toolbar-icons">
