--- a/static/css/status.css
+++ b/static/css/status.css
@@ -24,7 +24,7 @@ body {
 
 /* Status List */
 .status-list {
-    width: 40%;
+    width: 30%;
     padding: 20px;
     overflow-y: auto;
     background: linear-gradient(to bottom, #1a1a2e, #16213e);
@@ -45,8 +45,8 @@ body {
 }
 
 .status-item img, .my-status img {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     margin-right: 10px;
 }
@@ -70,17 +70,23 @@ body {
     color: rgb(255, 255, 255);
 }
 .status{
+    border-radius: 10px;
     gap: 20px;
     align-items: center;
     display: flex;
-    padding: 10px;
-    margin-top: 20px;
+    padding:10px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.status:hover{
+    background: linear-gradient(90deg, rgba(108, 92, 231, 0.1), transparent);
+
 }
 
 .floating-icons {
     position: fixed;
     bottom: 6%;
-    left: 34%;
+    left: 28%;
     display: flex;
     flex-direction: column;
     gap: 15px;
